Update handout for 2024

--- a/PS3_handout.tex
+++ b/PS3_handout.tex
@@ -186,15 +186,15 @@
 
 \newcommand{\courseNum}{\href{https://geometric3d.github.io}{16822}}
 \newcommand{\courseName}{\href{https://geometric3d.github.io}{Geometry-based Methods in Vision}}
-\newcommand{\courseSem}{\href{https://geometric3d.github.io}{Fall 2023}}
-\newcommand{\courseUrl}{\url{https://piazza.com/cmu/fall2023/16822}}
+\newcommand{\courseSem}{\href{https://geometric3d.github.io}{Fall 20224}}
+\newcommand{\courseUrl}{\url{https://piazza.com/cmu/fall2024/16822b}}
 \newcommand{\hwNum}{Problem Set 3}
 \newcommand{\hwTopic}{Two View Geometry and Reconstruction}
 \newcommand{\hwName}{\hwNum: \hwTopic}
-\newcommand{\outDate}{Oct. 10, 2023}
-\newcommand{\dueDate}{Oct. 24, 2023 11:59 PM}
+\newcommand{\outDate}{Oct. 8, 2024}
+\newcommand{\dueDate}{Oct. 22, 2024 11:59 PM}
 \newcommand{\instructorName}{Shubham Tulsiani}
-\newcommand{\taNames}{Ben Eisner, Nupur Kumari}
+\newcommand{\taNames}{Jianjin Xu, Easton Potokar}
 
 %\pagestyle{fancyplain}
 \lhead{\hwName}
