Tweak size of Problem 8

--- a/questions.tex
+++ b/questions.tex
@@ -102,17 +102,17 @@
 
     (a) \textbf{[2 pts]} Express $\Av$ in terms of $(u, v)$ (expressing one row suffices).
 
-    \begin{tcolorbox}[fit,height=3cm, width=\linewidth, blank, borderline={0.5pt}{-2pt},halign=center, nobeforeafter]
+    \begin{tcolorbox}[fit,height=8cm, width=\linewidth, blank, borderline={0.5pt}{-2pt},halign=center, nobeforeafter]
     \end{tcolorbox}
 
     (b) \textbf{[6 pts]} If $\Av$ is singular, show that there exists a $3 \times 3$ matrix $\Qv$ that is different from $\Fv$, such that for all $8$ correspondence, we have $\pv_i^{\prime\top} \Qv \pv_i = 0$.
 
-    \begin{tcolorbox}[fit,height=4cm, width=\linewidth, blank, borderline={0.5pt}{-2pt},halign=center, nobeforeafter]
+    \begin{tcolorbox}[fit,height fill, width=\linewidth, blank, borderline={0.5pt}{-2pt},halign=center, nobeforeafter]
     \end{tcolorbox}
 
     (c) \textbf{[6 pts]} Show that the eight points in $\mathbb{P}^3$ corresponding to $(\pv, \pv^\prime)_i~~\forall~ i \in [1, 8]$ must lie on a quadric surface. (Hint, a quadric $\Sv$ is defined by the equation $\Xv^T\Sv\Xv = 0$, where $\Sv$ is a symmetric $4 \times 4$ matrix).
 
-    \begin{tcolorbox}[fit,height=4cm, width=\linewidth, blank, borderline={0.5pt}{-2pt},halign=center, nobeforeafter]
+    \begin{tcolorbox}[fit,height=8cm, width=\linewidth, blank, borderline={0.5pt}{-2pt},halign=center, nobeforeafter]
     \end{tcolorbox}
 
     (d) \textbf{[4 pts]} Show that the optical centers $\Cv$ and $\Cv^\prime$ of the two cameras lie on this quadric.
