--- a/PS3_handout.tex
+++ b/PS3_handout.tex
@@ -186,15 +186,15 @@
 
 \newcommand{\courseNum}{\href{https://geometric3d.github.io}{16822}}
 \newcommand{\courseName}{\href{https://geometric3d.github.io}{Geometry-based Methods in Vision}}
-\newcommand{\courseSem}{\href{https://geometric3d.github.io}{Fall 20224}}
-\newcommand{\courseUrl}{\url{https://piazza.com/cmu/fall2024/16822b}}
+\newcommand{\courseSem}{\href{https://geometric3d.github.io}{Fall 2025}}
+\newcommand{\courseUrl}{\url{https://piazza.com/cmu/fall2025/16822b}}
 \newcommand{\hwNum}{Problem Set 3}
 \newcommand{\hwTopic}{Two View Geometry and Reconstruction}
 \newcommand{\hwName}{\hwNum: \hwTopic}
-\newcommand{\outDate}{Oct. 8, 2024}
-\newcommand{\dueDate}{Oct. 22, 2024 11:59 PM}
-\newcommand{\instructorName}{Shubham Tulsiani}
-\newcommand{\taNames}{Jianjin Xu, Easton Potokar}
+\newcommand{\outDate}{Oct. 7, 2025}
+\newcommand{\dueDate}{Oct. 21, 2025 11:59 PM}
+\newcommand{\instructorName}{Michael Kaess}
+\newcommand{\taNames}{Jianjin Xu, Kallol Saha}
 
 %\pagestyle{fancyplain}
 \lhead{\hwName}
